<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:src="@drawable/menu"/>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:background="@color/details"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/menu"
        android:textAlignment="center" />
</LinearLayout>
    <Button
        android:id="@+id/bb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_margin="50dp"
        android:backgroundTint="@color/details"
        android:textStyle="bold"
        android:text="@string/ejercico_1"
        android:textAlignment="center" />
    <Button
        android:id="@+id/bb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_margin="50dp"
        android:backgroundTint="@color/details"
        android:textStyle="bold"
        android:text="@string/ejercicio_2"
        android:textAlignment="center" />
    <Button
        android:id="@+id/bb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_margin="50dp"
        android:backgroundTint="@color/details"
        android:textStyle="bold"

        android:text="@string/ejercicio_4"
        android:textAlignment="center" />

</LinearLayout>